force-app/main/default/objects/MUSW__Approval__c/MUSW__Approval__c.object-meta.xml
<CustomObject>
    <label>Approval</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approvals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>