force-app/main/default/objects/MUSW__Approval__c/fields/AVO_Permit2__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permit</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>