force-app/main/default/objects/MUSW__Approval__c/fields/MUSW__Expiration__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Expiration__c</fullName>
    <label>Expiration</label>
    <type>DateTime</type>
</CustomField>