force-app/main/default/objects/MUSW__Approval__c/fields/MUSW__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>