force-app/main/default/objects/MUSW__Approval__c/fields/MUSW__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Record_Type__c</fullName>
    <description>Record type information related to record Id</description>
    <label>Record Type</label>
    <length>125</length>
    <type>Text</type>
</CustomField>