force-app/main/default/objects/MUSW__Approval__c/fields/MUSW__Related_To__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Related_To__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; MUSW__Record_Id__c , &quot;Record&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applied To</label>
    <type>Text</type>
</CustomField>