force-app/main/default/objects/MUSW__Approval__c/fields/MUSW__Request_Comment__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Request_Comment__c</fullName>
    <label>Request Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>