force-app/main/default/objects/MUSW__Approval__c/fields/MUSW__Transaction_Expiration__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Transaction_Expiration__c</fullName>
    <label>Transaction Expiration</label>
    <type>DateTime</type>
</CustomField>