force-app/main/default/objects/MUSW__Approval__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <description>test</description>
    <label>test</label>
    <length>12</length>
    <type>Text</type>
</CustomField>