force-app/main/default/objects/MUSW__Approval__c/listViews/AVO_All_Approvals.listView-meta.xml
<ListView>
    <fullName>AVO_All_Approvals</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>