force-app/main/default/objects/MUSW__Approval__c/listViews/MUSW__My_Pending_Approvals.listView-meta.xml
<ListView>
    <fullName>MUSW__My_Pending_Approvals</fullName>
    <columns>NAME</columns>
    <columns>test__c</columns>
    <columns>MUSW__Request_Comment__c</columns>
    <columns>MUSW__Record_Type__c</columns>
    <columns>MUSW__Related_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>MUSW__Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Pending Approvals</label>
</ListView>