force-app/main/default/objects/MUSW__Approval__c/listViews/MUSW__Team_Pending_Approvals.listView-meta.xml
<ListView>
    <fullName>MUSW__Team_Pending_Approvals</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Request_Comment__c</columns>
    <columns>MUSW__Record_Type__c</columns>
    <columns>MUSW__Related_To__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>MUSW__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MUSW__Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Team Pending Approvals</label>
</ListView>